# 3D-Engine

./: CMakeLists.txt  conanfile.txt  main.cpp
assets/objects/json/: Cube.json
assets/objects/scripts/: RotatingCube.cpp  RotatingCube.hpp
